// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomeBanner component should render HomeBanner component by default 1`] = `
<div
  className="root"
>
  <div
    className="header"
  >
    <a
      className="root"
      href="/"
      onClick={[Function]}
    >
      <span
        className="bold"
      >
        netflix
      </span>
      roulete
    </a>
    <button
      className="root secondary"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      + add movie
    </button>
  </div>
  <h2
    className="title"
  >
    Find your movie
  </h2>
  <div
    className="root"
  >
    <input
      className="input"
      onChange={[Function]}
      placeholder="What do you want to watch?"
      value=""
    />
    <button
      className="root primary button"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      Search
    </button>
  </div>
</div>
`;

exports[`HomeBanner component should render HomeBanner component with opened modal 1`] = `
Array [
  <div
    className="root"
  >
    <div
      className="header"
    >
      <a
        className="root"
        href="/"
        onClick={[Function]}
      >
        <span
          className="bold"
        >
          netflix
        </span>
        roulete
      </a>
      <button
        className="root secondary"
        disabled={false}
        onClick={[MockFunction]}
        type="button"
      >
        + add movie
      </button>
    </div>
    <h2
      className="title"
    >
      Find your movie
    </h2>
    <div
      className="root"
    >
      <input
        className="input"
        onChange={[Function]}
        placeholder="What do you want to watch?"
        value=""
      />
      <button
        className="root primary button"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        Search
      </button>
    </div>
  </div>,
  "---Modal---",
]
`;
